# ml-tutor

./: .gitignore  DESIGN.md  README.md  package.sh  pyproject.toml
ml-tutor/: __init__.py  anki_addon.py  cards_decorators.py  config.json  constants.py  main.py  manifest.json  ml_tutor.py  notes_cache.py  notes_wrappers.py  persistent_structures.py  prompts.py  utils.py
ml-tutor/ml/: __init__.py  ml_provider.py  open_ai.py
